--- a/src/pages/OvulationTrackerStyle.css
+++ b/src/pages/OvulationTrackerStyle.css
@@ -1,116 +1,71 @@
-.ov-container {
-    position: relative;
-    height: 100vh; /* Adjust as needed */
+.container-ot{
+    /* display: inline-block; */
+    /* flex-direction: column; */
+    margin-left: 3%;
+    margin-top: 2%;
+
+}
+.container-ot h2{
+    font-size: 75px;
+    margin-bottom: 2%;
+}
+.box-style-ot{
+    display: inline-block;
+    text-align: center;
     background-image: url('../Components/Assets/pink_gradient.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed; /* Add this line */
+    width: auto;
+    height: auto;
+    padding: 10%;
+    border-radius: 1.5rem;
 }
-
-.title-container{
-    position: relative;
-    z-index: 1;
-    padding: 0px;
+.box-style-ot p{
+    font-size: 55px;
 }
-
-.ot-title h2{
-    color: #0b2941;
-    letter-spacing: -3px;
-    margin-left: 8rem;
-    font-size: 70px;
-    font-family: 'Poppins';
-    padding-top: 50px; /* Adjust as needed */
+.box-style-ot .little-small{
+    font-size: 35px;
 }
-
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    justify-content: center;
-    padding: 20px;
+.box-style-ot h1{
+    font-size: 120px;
 }
-
-.containertitle{
-    width: 800px;
-    height: 100px;
-    z-index: 1;
-    margin-left: 4%;
-    display: flex;
-    justify-content: center;
-    align-items: left;
-    flex-direction: column;
+.box-style-ot button{
+    padding: 1%;
+    padding-left: 3%;
+    padding-right: 3%;
+    font-size: 20px;
+    color: white;
+    font-weight: 700;
+    border: none;
+    border-radius: 2rem;
+    background-color: rgb(75, 230, 230);
 }
-
-.glasstitle{
-    background: linear-gradient(135deg, rgba(247, 173, 241, 0.4), rgba(232, 120, 120, 0));
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border:1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 4px 22px 0 rgba(0, 0, 0, 0.37);
-    z-index: 1;
+.box-style-two{
+    display: inline-block;
+    background-image: url('../Components/Assets/violet_pink_bkg_img2.jpg');
+    margin-left: 1%;
+    padding: 6%;
+    border-radius: 1rem;
+    margin-bottom: 15%;
+    height: auto;
+    width: auto;
+    /* margin-top: 5%; */
 }
-
-.container0{
-    width: 800px;
-    height: 800px;
-    z-index: 1;
-    margin-left: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-
-.container0 h3{
-    text-align: center;
-    font-size: 40px;
-}
-
-.container0 h1{
-    text-align: center;
-    font-size: 105px;
-}
-
-.container0 p{
+.box-style-two p{
     font-size: 25px;
+    font-weight:500;
 }
-
-.glass1{
-    background: linear-gradient(135deg, rgba(247, 173, 241, 0.4), rgba(232, 120, 120, 0));
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border:1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 4px 22px 0 rgba(0, 0, 0, 0.37);
-    z-index: 1;
+.box-style-third{
+    display: inline-block;
+    background-image: url('../Components/Assets/violet_pink_bkg_img2.jpg');
+    margin-left: 1%;
+    padding: 6%;
+    padding-top: 9%;
+    border-radius: 1rem;
+    margin-bottom: 15%;
+    height: auto;
+    width: auto;
+    /* margin-top: 5%; */
 }
-
-.glass{
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border:1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 4px 22px 0 rgba(0, 0, 0, 0.37);
-    z-index: 1;
-}
-
-.container{
-    width: 500px;
-    height: 300px;
-    z-index: 1;
-}
-
-.container1{
-    width: 500px;
-    height: 300px;
-    z-index: 1;
-    margin-left: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.box-style-third p{
+    font-size: 25px;
+    font-weight:500;
 }
