--- a/src/pages/CheckHealthStyle.css
+++ b/src/pages/CheckHealthStyle.css
@@ -100,18 +100,26 @@
 .feature-box
 {   
     margin-top: 10%;
+    margin-bottom: 15%;
     border: 3px solid rgb(87, 87, 87);
     /* background-color: #42484c; */
     box-shadow: #42484C;
     border-radius: 1rem;
+    gap: 5;
     padding: 45px;
-    z-index: 1                                          ;
+    z-index: 1;
+    transition: background-color 300ms ease-out;
+     backdrop-filter: blur(undefined);
+    -webkit-backdrop-filter: blur(undefined);                                     ;
+}
+.feature-box:hover{
+    background-color: rgba(41, 41, 41, 0.08);
 }
 .feature-box-about{
     /* position: relative; */
     /* right: 5%; */
     font-size: 25px;
-    /* background-color: #ffffff; */
+    /* background-color: #613e3e; */
     margin-top: 5%;
     margin-bottom: 5%;
     /* margin-right: 5%; */
