--- a/src/pages/HomeStyle.css
+++ b/src/pages/HomeStyle.css
@@ -1,27 +1,6 @@
-/* *{
-  margin: 0;
-  text-decoration: none;
-  padding: 0;
-} */
 
-/* .header_master{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 7.5rem;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  border-radius: 0px 0px 10px 10px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  z-index: 1;
-  text-decoration: none;
-} */
 .background_home{
-  height: 50vh;
+  height: 100vh;
 }
 .page_name{
   text-decoration: none;
@@ -31,6 +10,7 @@
 }
 
 .navbar_master{
+  /* position: relative;  */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,7 +19,50 @@
   height: 7.5rem;
   border-radius: 0px 0px 10px 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 }
+.dropdown {
+  position: absolute;
+  display: none;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 4px;
+}
+
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown-toggle:hover .dropdown {
+  display: block;
+}
+
+.dropdown-toggle:focus .dropdown {
+  display: block;
+}
+
+.dropdown-toggle .dropdown {
+  position: absolute;
+  top: 12%;
+  right: 0;
+  display: block;
+}
+
 .page_name{
   color:#2c3e50;
   font-size: 35px;
@@ -205,6 +228,9 @@
     margin-left:15.4rem;
     margin-top: 65%;
   }
+  .navbar_master{
+    width: 100%;
+  }
   
 }
 @media (max-width: 640px ){
@@ -289,7 +315,7 @@
   }
   .checkbtn{
     width: 8%;
-    margin-left: 23rem;
+    margin-left: 24.5rem;
     margin-top: 3%;
   }
   .home_intro .fix_moko{
@@ -467,14 +493,13 @@
   left: 3%;
   width: 480px;
   height: 460px;
-  /* background-color: white; */
+  background-color: white;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 0px 0px 10px 10px;
 }
 
 .first_para{
   /* color: #A024A3; */
-  color: white;
+  color: black;
   font-family:'Montserrat', sans-serif;
   font-size: 35px;
   width: 85%;
@@ -486,8 +511,7 @@
 .second_para{
   width: 85%;
 font-size: 16px;
-color: #A024A3;
-  color: white;
+color: black; 
   margin-top: 3%;
   margin-bottom: 3%;
   margin-left: 10%;
@@ -539,7 +563,9 @@ color: #A024A3;
 .fix_moko{
   display: flex;
   justify-content: center;
-  
+  text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .button_type{
@@ -549,9 +575,6 @@ color: #A024A3;
   background-image: -ms-linear-gradient(top, #A024A3, #A024A3);
   background-image: -o-linear-gradient(top, #A024A3, #A024A3);
   background-image: linear-gradient(to bottom, #A024A3, #A024A3);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
@@ -565,6 +588,7 @@ color: #A024A3;
   cursor: pointer;
   text-decoration: none;
   z-index: 1;
+  width: 100%;
 }
 .button_type:hover{
   background: #88488a;
@@ -576,8 +600,8 @@ color: #A024A3;
   text-decoration: none;
 }
 .home_picture{
-  object-fit: cover;
-  height: 52.688rem ;
+  /* object-fit: cover; */
+  height: 100vh;
   width: 100%;
   z-index: -1;
 }
