--- a/src/pages/OvulationTrackerStyle.css
+++ b/src/pages/OvulationTrackerStyle.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .container-ot{
     /* display: inline-block; */
     /* flex-direction: column; */
@@ -18,7 +17,7 @@
     height: auto;
     padding: 10%;
     border-radius: 1.5rem;
-=======
+}
 .ov-container {
     position: relative;
     height: 100vh;
@@ -27,12 +26,10 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
->>>>>>> 053d5d3c9970b38e0277a8f4709d4ee8e9e89344
 }
 .box-style-ot p{
     font-size: 55px;
 }
-<<<<<<< HEAD
 .box-style-ot .little-small{
     font-size: 35px;
 }
@@ -80,7 +77,7 @@
 .box-style-third p{
     font-size: 25px;
     font-weight:500;
-=======
+}
 
 .ot-title h2{
     color: #0b2941;
@@ -279,5 +276,4 @@
         grid-template-columns: 1fr;
         grid-template-rows: auto;
     }
->>>>>>> 053d5d3c9970b38e0277a8f4709d4ee8e9e89344
 }
