finish some page design

--- a/src/Components/Admin/TabView/PregnancyWheelLMPStyle.css
+++ b/src/Components/Admin/TabView/PregnancyWheelLMPStyle.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     /* Add other styles as needed */
-    margin-top: 0%;
+    /* margin-top: 110%; */
     background-color: rgba(238, 97, 153, 0.36);
     width: 768px;
     height: 650px;
