--- a/src/Components/Admin/TabView/PregnancyWheelTABStyle.css
+++ b/src/Components/Admin/TabView/PregnancyWheelTABStyle.css
@@ -4,15 +4,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100%;
+    /* margin-bottom: 100%; */
     gap: 0px;
     z-index: 1;
+    height: 100vh;
+    margin-top: -47%;
 }
 
 
 .TabButtons {
     margin-left: 11rem;
-    /* margin-bottom: 55%; */
+    margin-bottom: 95%;
     align-items: center;
     position: relative;
 }
@@ -43,10 +45,10 @@
   }
   
 .preg-bkg{
-    height: 100vh;
+    /* height: 100vh;
     background: rgb(245,173,207);
     background: linear-gradient(162deg,
-     rgba(245,173,207,1) 29%, rgba(196,255,159,1) 73%, rgba(253,176,255,1) 92%);
+     rgba(245,173,207,1) 29%, rgba(196,255,159,1) 73%, rgba(253,176,255,1) 92%); */
 }
 
 .TabButtons {
@@ -54,6 +56,6 @@
     justify-content: center;
     align-items: center;
     gap: 0px;
-    margin-top: 10%;
+    /* margin-top: 10%; */
 }
 
