--- a/src/pages/HomeStyle.css
+++ b/src/pages/HomeStyle.css
@@ -1,6 +1,6 @@
-
 .background_home{
-  height: 100vh;
+  box-sizing: none;
+  /* height: 100vh; */
 }
 .page_name{
   text-decoration: none;
@@ -117,9 +117,9 @@
     .navbar_master ul li a{
       font-size: 13px;
     }
-    .home_intro{
+    /* .home_intro{
       margin-left: 11rem;
-    }
+    } */
 }
 @media (max-width: 952px){
   .page_name {
@@ -151,27 +151,21 @@
     left: 0;
   }
   .background_home .home_intro{
-    border: none;
-    /* box-shadow: none; */
-    border-radius: 15rem;
-    /* background-color: #A024A3; */
-    width:auto;
-    height:auto;
-    z-index: 2;
+    display: block;
   }
-  .home_intro {
-    margin-top: 25rem;
+  /* .home_intro {
+    margin-top: 2rem;
     margin-left:18rem;
     z-index: -1;
-  }
- .first_para {
-    display: none;
+  } */
+ .first_para-1 {
+    display: block;
   }
   .second_para{
-    display: none;
+    display: block;
   }
   .flex_more .assistant_intro{
-    display: none;
+    display: block;
   }
  .button_type  {
   font-size: 12px;
@@ -214,7 +208,7 @@
     left: 0;
   }
   .home_intro {
-    margin-left:16rem;
+    /* margin-left:25rem; */
   }
   
 }
@@ -224,10 +218,10 @@
     margin-top: 5%;
     margin-left: 24%;
   }
-  .home_intro {
+  /* .home_intro {
     margin-left:15.4rem;
     margin-top: 65%;
-  }
+  } */
   .navbar_master{
     width: 100%;
   }
@@ -237,14 +231,14 @@
   .page_name{
     margin-left: 17%;
   }
-  .home_intro {
+  /* .home_intro {
     margin-left:10rem;
-  }
+  } */
 }
 
 @media only screen and (max-width: 520px) {
   .home_intro .fix_moko {
-    margin-right: 20%;
+    /* margin-right: 20%; */
   }
 
 }
@@ -266,10 +260,6 @@
   .checkbtn{
     margin-top: 3%;
   }
-  .home_intro .fix_moko{
-    margin-left: -20%;
-    margin-top: 15rem;
-  }
 }
 
 @media (max-width: 450px) {
@@ -286,10 +276,6 @@
   }
   .checkbtn{
     margin-top: 3%;
-  }
-  .home_intro .fix_moko{
-    margin-left: -20%;
-    margin-top: 15rem;
   }
 }
 
@@ -318,10 +304,6 @@
     margin-left: 24.5rem;
     margin-top: 3%;
   }
-  .home_intro .fix_moko{
-    margin-left: -25%;
-    margin-top: 15rem;
-  }
 }
 
 @media (max-width: 375px) {
@@ -338,9 +320,6 @@
     /* text-align: center; */
     margin-left:17%;
   }
-  .fix_moko .button_type{
-    margin-top: 10rem;
-  }
   .navbar_master .checkbtn i img{
     margin-right: -55%;
     height: 100%;
@@ -351,10 +330,6 @@
   .checkbtn{
     width: 10%;
     margin-left: 28rem;
-  }
-  .home_intro .fix_moko {
-    margin-right: -25%;
-    margin-top: 25rem;
   }
 }
 @media (max-width: 350px) {
@@ -386,134 +361,48 @@
   width: 10%;
   margin-left: 28rem;
 }
-.home_intro .fix_moko {
-  margin-right: -75%;
-  margin-top: 34rem;
-}
-}
-/* section{
-  background: url(bg1.jpg) no-repeat;
-  background-size: cover;
-  height: calc(100vh - 80px);
-} */
 
-/* .navbar_master{
-  display: flex;
-  margin-right: 8%;
 }
 
-.navbar_master .st-margaret-nav, .plan-care-nav{
-  text-decoration: none;
-}
-
-.navbar_master h1{
-  color: #4d4d4d;
-  font-size: 17px;
-  font-family:'Montserrat', sans-serif;
-  margin-left: 1.5rem;
-  cursor: pointer;
-} */
-
-/* .classniline{
-  position: absolute;
-  height: 80px;
-  left: 93.1%;
-  top: 15%;
-  border-right: solid 2px #4d4d4d;
-} */
-/* .nav-btn-responsive{
-  position: absolute;
-  right: 0;
-} */
-
-/* .hamber-responsive img{
-  display: none;
-  width: 5%;
-  background-color: #A024A3;
-  float: right;
-  cursor: pointer;
-} */
-
-/* @media  (max-width: 952px){
-  label.page_name{
-    font-size: 30px;
-    padding-left: 50px;
-  }
-  .navbar_master h1 {
-    font-size: 14px;
-  }
-  .fix_more h1{
-    font-size: 14px;
-  }
-
-  .fix_more{
-    width: 3%;
-  }
-}
-@media  (max-width: 858px){
- .hamber-responsive img{
-  display: block;
- }
- .header_master h1{
-  text-align: center;
-  align-items: center;
- }
- .navbar_master {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background-color: aqua;
-  left: -100%;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  transition: all .5s;
-}
-#check:checked ~ .navbar_master {
-  left: 0;
-}
-} */
-.fix_more{
+/* .fix_more{
   display: flex;
   flex-direction: column-reverse;
   position: absolute;
   top: 20%;
   right: 3%;
   cursor: pointer;
-}
+} */
 .fix_more h1{
   margin: auto;
   text-align: center;
 }
-.home_intro{
+.home_intro-style{
   position: absolute;
-  top: 23%;
-  left: 3%;
+  top: 30%;
+  /* margin-bottom: 55%; */
+  left: 5%;
   width: 480px;
-  height: 460px;
+  height: 430px;
   background-color: white;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.first_para{
+.first_para-1{
   /* color: #A024A3; */
   color: black;
   font-family:'Montserrat', sans-serif;
   font-size: 35px;
   width: 85%;
   font-weight: 650;
-  margin-top:8%;
+  margin-top:10%;
+  margin-bottom: 5%;
   margin-left: 10%;
 }
-
 .second_para{
   width: 85%;
-font-size: 16px;
-color: black; 
-  margin-top: 3%;
-  margin-bottom: 3%;
+  font-size: 16px;
+  color: black; 
+  margin-bottom: 0;
   margin-left: 10%;
   font-weight: 650;
   font-family:'Montserrat', sans-serif;
@@ -521,19 +410,17 @@ color: black;
 
 .flex_more{
   display: flex;
+  text-align: center;
   margin-left: 5%;
   margin-bottom: 2%;
-  margin-top: 5%;
+  margin-top: 7%;
   width: 100%;
 }
-.flex_more p{
-  font-size: 13px;
-}
+
 .assistant_intro{
-  height: 5%;
+  width: 100%;
   margin-right: 10%;
   background: #E9E9E9;
-  display: flex;
   align-items: center;
   text-align: center;
   background: #A024A3;
@@ -542,9 +429,6 @@ color: black;
   background-image: -ms-linear-gradient(top, #A024A3, #A024A3);
   background-image: -o-linear-gradient(top, #A024A3, #A024A3);
   background-image: linear-gradient(to bottom, #A024A3, #A024A3);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
   font-family: Arial;
   color: #ffffff;
   padding: 10px 20px 10px 20px;
@@ -558,7 +442,6 @@ color: black;
   text-decoration: none;
   z-index: 1;
 }
-
 
 .fix_moko{
   display: flex;
@@ -600,7 +483,7 @@ color: black;
   text-decoration: none;
 }
 .home_picture{
-  /* object-fit: cover; */
+  object-fit: cover;
   height: 100vh;
   width: 100%;
   z-index: -1;
