--- a/src/Components/Auth/LoginForm/PasswordResetFormStyle.css
+++ b/src/Components/Auth/LoginForm/PasswordResetFormStyle.css
@@ -1,49 +1,7 @@
-/* PasswordResetFormStyle.css */
+@import url("https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css");
 
-.reset-form {
-  background-color: white;
-  padding: 35px;
-  border-radius: 10px;
-  height: 450px;
-  margin: 20px 10px;
-  transform: translateX(290%);
-  margin-top: 15%;
-  display: inline-block;
-  width: 100%;
-  max-width: 450px;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.reset-heading{
-  padding-top: 10%;
-  position: center;
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.reset-heading p{
-  padding-top: 20px;
-}
-
-.input-field{
-  padding-top: 10%;
-}
-
-.reset-form input[type="email"] {
-  width: 100%;
-  padding: 20px;
-  margin: 20px 0;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
-.reset-form button[type="submit"] {
-  width: 100%;
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
-  color: white;
-  background-color: purple;
-  cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
+.full-page {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
