--- a/src/pages/CalendarStyle.css
+++ b/src/pages/CalendarStyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -145,4 +145,4 @@ background: #a024a3;
 background: linear-gradient(156deg,#a024a3 0%, #000000 40%, #a024a3 80%);
 background: -webkit-linear-gradient(156deg,#a024a3 0%, #000000 40%, #a024a3 80%);
 background: -moz-linear-gradient(156deg,#a024a3 0%, #000000 40%, #a024a3 80%);
-}
+} */
