--- a/src/pages/UserProfileStyle.css
+++ b/src/pages/UserProfileStyle.css
@@ -1,149 +1,186 @@
-.bgd-patients-record{
-  height: 100vh;
-  /* background-color: #EE6199; */
-  z-index: -1;
+
+
+.avatar-xxl {
+   height: 7rem;
+   width: 7rem;
 }
-.main-body {
-  margin-bottom: 5%;
-  padding-top: 10%;
-  display: flex;
-  align-items: center;
-}
+
 .card {
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-}
-.card-two-style{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 2rem;
-  width: 30rem;
-  height:17rem;
-  margin-left: 15rem;
-}
-.secondary-card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 0 solid rgba(0,0,0,.125);
-  border-radius: .25rem;
+   margin-bottom: 20px;
+   margin-top: 20px;
+   -webkit-box-shadow: 0 2px 3px #eaedf2;
+   box-shadow: 0 2px 3px #eaedf2;
 }
 
-.card-body {
-  flex: 1 1 auto;
-  min-height: 1px;
-  padding: 1rem;
-}
-.card-grid-style{
-  display: flex;
-}
-.gutters-sm {
-  margin-right: -8px;
-  margin-left: -8px;
+.pb-0 {
+   padding-bottom: 0!important;
 }
 
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
-  padding-right: 8px;
-  padding-left: 8px;
+.font-size-16 {
+   font-size: 16px!important;
 }
-.mb-3, .my-3 {
-  margin-bottom: 1rem;
-}
-
-.bg-gray-300 {
-  background-color: #e2e8f0;
-}
-.shadow-none {
-  box-shadow: none;
-}
-.btn-info{
-  background-color: #EE6199;
-    padding: 1% 1.5% 1% 1.5%;
-    text-decoration: none;
-    color: #e2e8f0;
-    border-radius: 10%;
-    cursor: pointer;
+.avatar-title {
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   background-color: #038edc;
+   color: #fff;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   font-weight: 500;
+   height: 100%;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
+   justify-content: center;
+   width: 100%;
 }
 
-.time-appointment{
-  display: flex;
-  justify-content: space-around;
-  background-color: white;
-  width: 85rem;
-  margin-top: 10%;
+.bg-soft-primary {
+   background-color: rgba(3,142,220,.15)!important;
 }
-.card-display-style{
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items:end ;
-  justify-content: end;
-}
-.card-three{
-  display: flex;
-  align-items: center;
-  background-color: white;
-  border-radius: 2rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  width: 55rem;
-  height: 25rem;
-  padding-left  : 5rem;
-  padding-right: 5rem;
-  margin-right: 15rem;
-}
-.card-holder-appointment{
-  position: absolute;
-  display:flex ;
-  align-items: center;
-  justify-content:center;
-  top: 65%;
-  /* z-index: 1; */
+.rounded-circle {
+   border-radius: 50%!important;
 }
 
-@media (max-width: 1800px) {
-  .card-three {
-    width: 40rem;
-    height: 25rem;
-    margin-right: 8rem;
-  }
-  .card-two-style{
-    width: 30rem;
-    height:17rem;
-    margin-left: 8rem;
-  }
-  .card-holder-appointment{
-    top: 75%;
-  }
+.nav-tabs-custom .nav-item .nav-link.active {
+   color: #038edc;
+}
+.nav-tabs-custom .nav-item .nav-link {
+   border: none;
+}
+.nav-tabs-custom .nav-item .nav-link.active {
+   color: #038edc;
 }
 
-@media (max-width: 1200px) {
-  .card-three {
-    width: 40rem;
-    height: 25rem;
-    margin-right: 8rem;
-  }
+.avatar-group {
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -ms-flex-wrap: wrap;
+   flex-wrap: wrap;
+   padding-left: 12px;
 }
 
-/* @media (max-width: 922px) {
-  .card-three {
-    margin-top: 25rem;
-    width: 40rem;
-    height: 25rem;
-    margin-right: 8rem;
-  }
-  .card-two-style{
-    position: absolute;
-    left: 35%;
-    top: 45%;
-    transform: translate(-50%,-50%);
-  }
-  .card-holder-appointment{
-    top: 135%;
-  }
-} */
+.border-end {
+   border-right: 1px solid #eff0f2 !important;
+}
+
+.d-inline-block {
+   display: inline-block!important;
+}
+
+.badge-soft-danger {
+   color: #f34e4e;
+   background-color: rgba(243,78,78,.1);
+}
+
+.badge-soft-warning {
+   color: #f7cc53;
+   background-color: rgba(247,204,83,.1);
+}
+
+.badge-soft-success {
+   color: #51d28c;
+   background-color: rgba(81,210,140,.1);
+}
+
+.avatar-group .avatar-group-item {
+   margin-left: -14px;
+   border: 2px solid #fff;
+   border-radius: 50%;
+   -webkit-transition: all .2s;
+   transition: all .2s;
+}
+
+.avatar-sm {
+   height: 2rem;
+   width: 2rem;
+}
+
+.nav-tabs-custom .nav-item {
+   position: relative;
+   color: #343a40;
+}
+
+.nav-tabs-custom .nav-item .nav-link.active:after {
+   -webkit-transform: scale(1);
+   transform: scale(1);
+}
+
+.nav-tabs-custom .nav-item .nav-link::after {
+   content: "";
+   background: #038edc;
+   height: 2px;
+   position: absolute;
+   width: 100%;
+   left: 0;
+   bottom: -2px;
+   -webkit-transition: all 250ms ease 0s;
+   transition: all 250ms ease 0s;
+   -webkit-transform: scale(0);
+   transform: scale(0);
+}
+
+.badge-soft-secondary {
+   color: #74788d;
+   background-color: rgba(116,120,141,.1);
+}
+
+.badge-soft-secondary {
+   color: #74788d;
+}
+
+.work-activity {
+   position: relative;
+   color: #74788d;
+   padding-left: 5.5rem
+}
+
+.work-activity::before {
+   content: "";
+   position: absolute;
+   height: 100%;
+   top: 0;
+   left: 66px;
+   border-left: 1px solid rgba(3,142,220,.25)
+}
+
+.work-activity .work-item {
+   position: relative;
+   border-bottom: 2px dashed #eff0f2;
+   margin-bottom: 14px
+}
+
+.work-activity .work-item:last-of-type {
+   padding-bottom: 0;
+   margin-bottom: 0;
+   border: none
+}
+
+.work-activity .work-item::after,.work-activity .work-item::before {
+   position: absolute;
+   display: block
+}
+
+.work-activity .work-item::before {
+   content: attr(data-date);
+   left: -157px;
+   top: -3px;
+   text-align: right;
+   font-weight: 500;
+   color: #74788d;
+   font-size: 12px;
+   min-width: 120px
+}
+
+.work-activity .work-item::after {
+   content: "";
+   width: 10px;
+   height: 10px;
+   border-radius: 50%;
+   left: -26px;
+   top: 3px;
+   background-color: #fff;
+   border: 2px solid #038edc
+}
